# zaim_io_tool

./: .env.sample  README.md  download.py  pyproject.toml  requirements.txt  upload.py
csvinput/: sample.csv
websession/: websession.py
zaim_io_tool/: download_function.py  login.py  upload_function.py
